# legibility-demo

./: README.md  agent.py  app.py  countries.json  fsm.py  main.py  pyproject.toml  report_server.py  steps.json  sunset_client.py  tools.py  weather_client.py  workflow_server.py
arazzo/: FINDINGS.md  README.md  briefing.arazzo.yaml  orchestrator.py
arazzo/openapi/: nominatim.yaml  open_meteo_forecast.yaml  sunrise_sunset.yaml
temporal/: FINDINGS.md  README.md  activities.py  disambiguate.py  start.py  worker.py  workflow.py
tests/: test_disambiguation.py  test_engine_additions.py  test_template.py
workflows/: workflow_1.json  workflow_2.json  workflow_3.json
