[project]
name = "fsm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "arazzo-runner>=0.9.6",
    "fastapi>=0.137.1",
    "gradio>=6.19.0",
    "psycopg2-binary>=2.9",
    "python-statemachine>=3.1.2",
    "requests>=2.34.2",
    "strands-agents>=1.44.0",
    "temporalio>=1.29.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
